--- a/src/styles/ShoppingList.css
+++ b/src/styles/ShoppingList.css
@@ -22,8 +22,8 @@
 .lmj-plant-sub-item {
 	/* border: solid 2px black; */
 	/* border-radius: 10px; */
-	height: 150px;
-	width: 150px;
+	/* height: 150px;
+	width: 150px; */
 	/* margin: 10px; */
 	display: flex;
 	align-items: center;
